--- a/style.css
+++ b/style.css
@@ -23,8 +23,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
     height: 100%;
-    background-color: rgba(241, 191, 191, 0.5);
+    background-color: rgba(250, 232, 193, 0.5);
     gap: 20px;
 }
 
@@ -35,10 +36,21 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    /* height: fit-content; */
-    /* display: flex;
+}
+
+.settings-panel {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-around; */
+    gap: 30px;
+}
+
+.column-align {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
 
 .player {
@@ -48,7 +60,8 @@ body {
 }
 
 .player.active {
-    border-left: 5px solid #000000; 
+    /* border-left: 5px solid #000000;  */
+    box-shadow: 0 0 20px rgb(255, 0, 238);
 }
 
 .player-1 {
@@ -100,7 +113,7 @@ button:hover {
 .node {
     fill: #333;
     /* r: 6; */
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 
 .line {
